--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
     <marquee>
         <h1>Hallo Marco! 🍺🍻</h1>
-        <img src="https://placeimg.com/640/480/any"/>
+        <img src="http://placekitten.com/200/300"/>
+        
     </marquee>
 </body>
 </html>
