--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <marquee>
         <h1>Hallo Marco! 🍺🍻</h1>
         <img src="http://placekitten.com/200/300"/>
-        
+        katze
     </marquee>
 </body>
 </html>
